# ChangeLog for sci-physics/vgm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Mar 2014; Oliver Freyermuth <o.freyermuth@googlemail.com> vgm-3.06.ebuild:
  Add subslot-dependency on sci-physics/root, rebuilding is needed on each ROOT
  version string change. For more details c.f. #505358 . 

  22 Mar 2014; <o.freyermuth@googlemail.com> vgm-3.06.ebuild:
  Address ebuild-issues: Use zip-snapshot instead of repo-tag, add missing die,
  fix typo in description. 

  21 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> vgm-3.06.ebuild:
  Updated minimum geant4 version, thanks Oliver Freyermuth

*vgm-3.06 (18 Jan 2013)

  18 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> +vgm-3.06.ebuild,
  +metadata.xml:
  Initial import
