@@ -1,1 +1,1 @@
-DIST vgm-code-731-tags-v3-06.zip 3668484 SHA256 1239e4faa0da2bc8127fb3979e8f8849e2f618ac0c766a2d1d051d8a1bd923fe SHA512 ce2785954bc3e4963884887d545984b4ff9dfd69c5d4cd965dec1d273dbde01d67c22a47c5095447432571ea2b797973a4193c85988559cfc9ab86298393356f WHIRLPOOL 2c8d612c2653e912081388d47651e5a16c7a216ee1317ff3d638b52116c367bbd9c13c7b3b69606a207b5e7bdfac167cba495ae0d94fb86350cdf5bf7b0a4953
+DIST vgm-code-731-tags-v3-06.zip 3668484 SHA256 b56faddcf28a2af8ebd835b17804d7edaf843b3e2ad9ee3170a6fe5bba209263 SHA512 27b275f4710bfd4f445147854260a768ca1808bad7fc0c4b38e28a4ade22acd80ff80d519341b279c81b9e9e303135f681003381acee2e28e549c93d74858f01 WHIRLPOOL 6393871bd1effd8318cbd3d76921eef79fc253fa09f2bf9e005bc6448b9602e481344f89e00d6a48dc43f6ff6c881dd8ea62ce9d07673c9b1e64c0cc842fec7e
