@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Apr 2014; Oliver Freyermuth <o.freyermuth@googlemail.com> vgm-3.06.ebuild:
+  Use zip-snapshot mirrored by jlec, sourceforge cannot automatically recreate
+  them and changes CRC each time
+
   27 Mar 2014; Oliver Freyermuth <o.freyermuth@googlemail.com> vgm-3.06.ebuild:
   Add subslot-dependency on sci-physics/root, rebuilding is needed on each ROOT
   version string change. For more details c.f. #505358 . 
@@ -18,4 +22,3 @@
   18 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> +vgm-3.06.ebuild,
   +metadata.xml:
   Initial import
-
